@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  29 Jul 2015; sakaki <sakaki@deciban.com> -gentoo-b2-sources-4.0.4.ebuild,
+  -gentoo-b2-sources-4.0.4-r1.ebuild:
+  Drop old
+
 *gentoo-b2-sources-4.1.3 (29 Jul 2015)
 
   29 Jul 2015; sakaki <sakaki@deciban.com> +gentoo-b2-sources-4.1.3.ebuild:
